# llvmpipe2wasm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.local-rnd.md  README.md
.github/release-notes/: dxc-wasm-prebuilt-latest.md  llvm-wasm-prebuilt-latest.md  webvulkan-package-latest.md
.github/workflows/: prebuilt-refresh.yml  smoke.yml
cmake/: BootstrapCpm.cmake  BootstrapEmsdk.cmake  BuildMesaLlvmpipeWasm.cmake  FetchWebVulkanSources.cmake  WebVulkanLlvmpipeWasmConfig.cmake.in  WebVulkanRuntimeShaderRegistry.cmake  WebVulkanShaderTools.cmake
cmake/toolchains/: WebVulkanEmscripten.cmake
runtime/include/webvulkan/: webvulkan_shader_runtime_registry.h
runtime/src/: webvulkan_shader_runtime_registry.c
tests/: BootstrapWasmer.cmake  CMakeLists.txt  RunLavapipeRuntimeSmoke.cmake
tests/wasm/: CMakeLists.txt
tests/wasm/include/vulkan/: vk_wasm_webgpu_surface.h
tests/wasm/src/: lavapipe_runtime_smoke.c  poc_nir_to_wasm_smoke.c  smoke_main.c  vk_wasm_webgpu_surface.c  webvulkan_shader_runtime_registry.c  webvulkan_shader_runtime_registry.h
tests/wasm/tools/: clang_wasm_runtime_smoke.mjs  smoke_runtime.mjs  validate_dispatch_bench.mjs
tools/: webvulkan_compile_spirv.mjs
